Updates UI/UX and adds splash screen
Signed-off-by: Rajkumar <rajkumaar2304@gmail.com>

--- a/app/src/main/res/layout/activity_exam_schedule.xml
+++ b/app/src/main/res/layout/activity_exam_schedule.xml
@@ -16,6 +16,7 @@
     <ListView
         android:id="@+id/list"
         android:layout_above="@id/banner_container"
+        android:divider="@android:color/white"
         android:dividerHeight="0dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
