--- a/app/src/main/res/layout/activity_home2.xml
+++ b/app/src/main/res/layout/activity_home2.xml
@@ -62,6 +62,8 @@
         <ListView
             android:id="@+id/list"
             android:layout_marginTop="30dp"
+            android:divider="@android:color/white"
+            android:dividerHeight="0dp"
             android:layout_below="@id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
