--- a/app/src/main/res/layout/activity_available_semesters.xml
+++ b/app/src/main/res/layout/activity_available_semesters.xml
@@ -17,8 +17,9 @@
         android:layout_above="@id/banner_container"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:dividerHeight="0dp"/>
+        android:divider="@android:color/white"
+        android:dividerHeight="0dp"
+        android:layout_height="match_parent" />
     <TextView
         android:id="@+id/emptyView"
         android:layout_width="wrap_content"
@@ -31,12 +32,33 @@
         android:text="No items found."
         tools:ignore="HardcodedText" />
     <!-- Loading indicator -->
-    <ProgressBar
+    <LinearLayout
+        android:layout_width="match_parent"
         android:id="@+id/progressBar"
-        style="@style/Widget.AppCompat.ProgressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_margin="10dp"
+        android:layout_centerInParent="true"
+        android:layout_height="wrap_content">
+        <com.github.ybq.android.spinkit.SpinKitView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            style="@style/SpinKitView.Circle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:SpinKit_Color="@color/colorAccent" />
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:id="@+id/quote"
+            android:textColor="@android:color/white"
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
+            android:text="Details matter, it\'s worth waiting to get it right\n- Steve Jobs"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText" />
+    </LinearLayout>
 
 
 </RelativeLayout>
