--- a/app/src/main/res/layout/activity_exams_under_each_dept.xml
+++ b/app/src/main/res/layout/activity_exams_under_each_dept.xml
@@ -15,6 +15,7 @@
         android:layout_centerInParent="true"/>
     <ListView
         android:id="@+id/list"
+        android:divider="@android:color/white"
         android:dividerHeight="0dp"
         android:layout_above="@id/banner_container"
         android:layout_width="match_parent"
