--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -78,6 +78,8 @@
             android:id="@+id/list"
             android:layout_marginTop="30dp"
             android:layout_below="@id/cgpa"
+            android:divider="@android:color/white"
+            android:dividerHeight="0dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
