--- a/app/src/main/res/layout/activity_exam_schedule.xml
+++ b/app/src/main/res/layout/activity_exam_schedule.xml
@@ -7,12 +7,33 @@
     android:background="@color/colorBackground"
     tools:context=".examschedule.ExamCategoryActivity">
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:visibility="gone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:id="@+id/loading_indicator"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_margin="10dp"
+        android:layout_centerInParent="true"
+        android:layout_height="wrap_content">
+        <com.github.ybq.android.spinkit.SpinKitView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            style="@style/SpinKitView.Circle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:SpinKit_Color="@color/colorAccent" />
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:id="@+id/quote"
+            android:textColor="@android:color/white"
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
+            android:text="Details matter, it\'s worth waiting to get it right\n- Steve Jobs"
+            android:layout_height="wrap_content"
+            tools:ignore="HardcodedText" />
+    </LinearLayout>
     <ListView
         android:id="@+id/list"
         android:layout_above="@id/banner_container"
@@ -20,7 +41,6 @@
         android:dividerHeight="0dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
     </ListView>
     <LinearLayout
         android:id="@+id/banner_container"
@@ -29,6 +49,4 @@
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
         />
-
-
 </RelativeLayout>
