Adds burst for 5k celebs and improves UX
Signed-off-by: Rajkumar <rajkumaar2304@gmail.com>

--- a/app/src/main/res/drawable-anydpi/ic_bug.xml
+++ b/app/src/main/res/drawable-anydpi/ic_bug.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="19.2"
     android:viewportHeight="19.2"
-    android:tint="#FFFFFF">
+    android:tint="#ffc107">
   <group android:translateX="-2.4"
       android:translateY="-2.4">
       <path
