--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,12 +8,18 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context=".activities.LaunchingActivity"
-        android:background="@android:color/black"
+        android:background="@color/colorPrimaryDark"
         tools:showIn="@layout/app_bar_main">
-        <GridView
+    <nl.dionsegijn.konfetti.KonfettiView
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+        <ListView
             android:id="@+id/items_list"
             android:layout_width="match_parent"
-            android:numColumns="2"
+            android:numColumns="1"
+            android:dividerHeight="0dp"
+            android:divider="@android:color/white"
             android:layout_above="@id/banner_container"
             android:layout_height="wrap_content"/>
     <LinearLayout
