--- a/app/src/main/res/layout/item_main_grid.xml
+++ b/app/src/main/res/layout/item_main_grid.xml
@@ -1,31 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:paddingEnd="10dp"
+    android:layout_height="wrap_content"
+    tools:ignore="RtlSymmetry,UnusedAttribute">
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="0dp"
+    android:layout_weight="9"
     android:id="@+id/landing_item_holder"
-    android:layout_height="200dp"
-    android:background="@color/colorPrimaryDark" >
+    android:layout_height="80dp">
 
     <ImageView
         android:id="@+id/landing_picture"
-        android:layout_width="match_parent"
+        android:layout_width="100dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
         android:layout_height="match_parent"
-        android:padding="50dp"
-        android:background="?attr/selectableItemBackground"
         android:scaleType="centerCrop"
-        android:layout_gravity="center" />
+        android:layout_centerVertical="true" />
 
     <TextView
         android:id="@+id/landing_text"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/landing_picture"
+        android:layout_centerVertical="true"
         android:layout_gravity="bottom|center"
-        android:background="#55000000"
         android:paddingBottom="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:ellipsize="marquee"
         android:paddingTop="10dp"
-        android:textSize="15sp"
+        android:textSize="20sp"
         android:textColor="@android:color/white" />
-
-</FrameLayout>
+</RelativeLayout>
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/ic_right"
+        android:layout_height="20dp" />
+</LinearLayout>
