--- a/app/src/main/res/menu/downloads_menu.xml
+++ b/app/src/main/res/menu/downloads_menu.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/delete_multiple"
+        android:id="@+id/trash"
         android:orderInCategory="100"
-        android:title="Delete multiple files"
-        />
-    <item
-        android:id="@+id/delete_all"
-        android:orderInCategory="100"
-        android:title="Delete all"
-        />
+        android:icon="@drawable/ic_trash"
+        app:showAsAction="ifRoom"
+        android:title="Delete files"
+        tools:ignore="HardcodedText" />
 </menu>
