Prepares for 3.0 release  - New UI  - Better UX and adjustments for smaller screen sizes  - 5k celebrations
Signed-off-by: Rajkumar <rajkumaar2304@gmail.com>

--- a/app/src/main/res/drawable-anydpi/ic_trash.xml
+++ b/app/src/main/res/drawable-anydpi/ic_trash.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="21.6"
     android:viewportHeight="21.6"
-    android:tint="#FFFFFF">
+    android:tint="#C71A1A">
   <group android:translateX="-1.2"
       android:translateY="-1.2">
       <path
