--- a/app/src/main/res/layout/thanks_dialog.xml
+++ b/app/src/main/res/layout/thanks_dialog.xml
@@ -2,7 +2,7 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/shapedialog"
+    android:background="@color/colorPrimary"
     android:layout_width="match_parent">
 
     <LinearLayout
